# bip39-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bip39.1
.github/workflows/: ci.yml  release.yml
benches/: bip39_bench.rs
contrib/: test.sh
scripts/: generate-completions.sh
src/: cli.rs  error.rs  lib.rs  main.rs  security.rs
src/commands/: entropy.rs  generate.rs  mod.rs  seed.rs  validate.rs
tests/: bip39_compliance_tests.rs  integration_tests.rs  property_tests.rs
